--- a/AutomationFramework/.classpath
+++ b/AutomationFramework/.classpath
@@ -37,5 +37,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/catni/Downloads/selenium-server-4.1.1.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
